# cpp-teaching-2025

lab0a/: CMakeLists.txt  README.md  main.cpp
lab0a/src/module1/: CMakeLists.txt
theory/: exceptions.cpp  inheritance.md  move_semantic_smart_pointers.md  templates.md
vector/: CMakeLists.txt  README.md  main.cpp  test.cpp  vector.cpp  vector.h
